Extra logging, to check what takes the time etc.